--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
     <title>Isabela Marques</title>
 </head>
 <body>
-    <header>
-        <img class="image" src="https://avatars.githubusercontent.com/u/61291155?s=460&u=56bbf3e5a5801208bbd7e2cc54e5a2697e0c1e7f&v=4" alt="Imagem da Isabela Marques">
-        <h1>Isabela Marques</h1>
-        <h2>dev.isabelamarques@gmail.com</h2>
-    </header>
 
-    <article class="buttons">
-        <a class="button" href="https://github.com/IsabelaMarques07">GitHub</a>
-        <a class="button" href="https://www.linkedin.com/in/isabela-marques-dias/">Linkedin</a>
-        <a class="button" href="https://www.instagram.com/_isamarquesbela/">Instagram</a>
-        <a class="button" href="https://medium.com/@isabelamarquesdev">Medium</a>
-    </article>
+    <main>
+        <header>
+            <img id="image" src="https://avatars.githubusercontent.com/u/61291155?s=460&u=56bbf3e5a5801208bbd7e2cc54e5a2697e0c1e7f&v=4" alt="Imagem da Isabela Marques">
+            <h1 id="name">Isabela Marques</h1>
+            <h2 id="email">dev.isabelamarques@gmail.com</h2>
+        </header>
+    
+        <article class="buttons">
+            <a class="button" href="https://github.com/IsabelaMarques07">GitHub</a>
+            <a class="button" href="https://www.linkedin.com/in/isabela-marques-dias/">Linkedin</a>
+        </article>
+        <article class="buttons">
+            <a class="button" href="https://www.instagram.com/_isamarquesbela/">Instagram</a>
+            <a class="button" href="https://app.rocketseat.com.br/me/isabela-marques">Rocketseat</a>
+        </article>
+    </main>
+    
 </body>
 </html>
