--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     
         <article class="buttons">
             <a class="button" href="https://github.com/IsabelaMarques07">GitHub</a>
-            <a class="button" href="https://www.linkedin.com/in/isabela-marques-dias/">Linkedin</a>
+            <a class="button" href="www.linkedin.com/in/isabelamarques07">Linkedin</a>
         </article>
         <article class="buttons">
-            <a class="button" href="https://www.instagram.com/_isamarquesbela/">Instagram</a>
+            <a class="button" href="https://www.instagram.com/isa.marques.dev/">Instagram</a>
             <a class="button" href="https://app.rocketseat.com.br/me/isabela-marques">Rocketseat</a>
         </article>
     </main>
