Fixing linkedin link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
         <article class="buttons">
             <a class="button" href="https://github.com/IsabelaMarques07">GitHub</a>
-            <a class="button" href="www.linkedin.com/in/isabelamarques07">Linkedin</a>
+            <a class="button" href="https://www.linkedin.com/in/isabelamarques07">Linkedin</a>
         </article>
         <article class="buttons">
             <a class="button" href="https://www.instagram.com/isa.marques.dev/">Instagram</a>
